// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Select Default smoke-test 1`] = `
<button id="id-1"
        class="cmpui_select__root"
        role="combobox"
        aria-expanded="false"
        aria-labelledby="id-2"
        aria-controls="id-3"
        aria-haspopup="listbox"
>
  <span>
    India
  </span>
  <div class="cmpui_select__keyboard-arrow-down-icon">
  </div>
</button>
`;

exports[`Components/Select Label smoke-test 1`] = `
<button id="id-4"
        class="cmpui_select__root"
        role="combobox"
        aria-expanded="false"
        aria-labelledby="id-5"
        aria-controls="id-6"
        aria-haspopup="listbox"
>
  <span>
    India
  </span>
  <div class="cmpui_select__keyboard-arrow-down-icon">
  </div>
  <label id="id-5"
         class="cmpui_select__label"
         for="id-4"
  >
    Label
  </label>
</button>
`;

exports[`Components/Select Show smoke-test 1`] = `
<button id="id-7"
        class="cmpui_select__root"
        role="combobox"
        aria-expanded="true"
        aria-labelledby="id-8"
        aria-controls="id-9"
        aria-haspopup="listbox"
>
  <span>
    India
  </span>
  <div class="cmpui_select__keyboard-arrow-down-icon">
  </div>
</button>
<div class="cmpui_float-box__root"
     tabindex="-1"
     style="position: fixed; top: 0px; left: 0px; max-width: 1264px; max-height: 332px; transform: translate(589.445px, 380px);"
>
  <div role="listbox"
       tabindex="0"
       id="id-9"
       aria-labelledby="id-8"
  >
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Alfa"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Alfa
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Bravo"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Bravo
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Charlie"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Charlie
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Delta"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Delta
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Echo"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Echo
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Foxtrot"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Foxtrot
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Golf"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Golf
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Hotel"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Hotel
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="India"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
        data-highlighted="true"
    >
      <div class="cmpui_select_check-icon"
           style="position: absolute; left: 8px;"
      >
      </div>
      India
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Juliett"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Juliett
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Kilo"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Kilo
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Lima"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Lima
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Mike"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Mike
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="November"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      November
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Oscar"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Oscar
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Papa"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Papa
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Quebec"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Quebec
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Romeo"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Romeo
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Sierra"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Sierra
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Tango"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Tango
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Uniform"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Uniform
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Victor"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Victor
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Whiskey"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Whiskey
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="X-ray"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      X-ray
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Yankee"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Yankee
    </li>
    <li class="cmpui_list-item__root"
        data-size="M"
        data-rounded="true"
        aria-selected="false"
        data-value="Zulu"
        tabindex="0"
        role="option"
        style="padding-left: 24px; position: relative;"
    >
      Zulu
    </li>
  </div>
</div>
`;
